--- a/action.yml
+++ b/action.yml
@@ -4,40 +4,6 @@ branding:
   icon: 'crop'
   color: 'orange'
 inputs:
-  root-reserve-mb:
-    description: 'Space to be left free on the root filesystem, in Megabytes.'
-    required: false
-    default: '1024'
-  temp-reserve-mb:
-    description: 'Space to be left free on the temp filesystem (/mnt), in Megabytes.'
-    required: false
-    default: '100'
-  swap-size-mb:
-    description: 'Swap space to create, in Megabytes.'
-    required: false
-    default: '4096'
-  overprovision-lvm:
-    description: |
-      Create the LVM disk images as sparse files, making the space required for the LVM image files *appear* unused on the
-      hosting volumes until actually allocated. Use with care, this can lead to surprising out-of-disk-space situations.
-      You should prefer adjusting root-reserve-mb/temp-reserve-mb over using this option.
-    required: false
-    default: 'false'
-  build-mount-path:
-    description: 'Absolute path to the mount point where the build space will be available, defaults to $GITHUB_WORKSPACE if unset.'
-    required: false
-  build-mount-path-ownership:
-    description: 'Ownership of the mount point path, defaults to standard "runner" user and group.'
-    required: false
-    default: 'runner:runner'
-  pv-loop-path:
-    description: 'Absolute file path for the LVM image created on the root filesystem, the default is usually fine.'
-    required: false
-    default: '/pv.img'
-  tmp-pv-loop-path:
-    description: 'Absolute file path for the LVM image created on the temp filesystem, the default is usually fine. Must reside on /mnt'
-    required: false
-    default: '/mnt/tmp-pv.img'
   remove-dotnet:
     description: 'Removes .NET runtime and libraries. (frees ~17 GB)'
     required: false
@@ -58,18 +24,16 @@ inputs:
     description: 'Removes cached Docker images. (frees ~3 GB)'
     required: false
     default: 'false'
+  remove-large-packages:
+    description: 'Removes larger APT Packages. (frees ~5 GB)'
+    required: false
+    default: 'false'
 runs:
   using: "composite"
   steps:
     - name: Disk space report before modification
       shell: bash
       run: |
-        echo "Memory and swap:"
-        free
-        echo
-        swapon --show
-        echo
-
         echo "Available storage:"
         df -h
         echo
@@ -79,20 +43,6 @@ runs:
       run: |
           set -euo pipefail
 
-          BUILD_MOUNT_PATH="${{ inputs.build-mount-path }}"
-          if [[ -z "${BUILD_MOUNT_PATH}" ]]; then
-            BUILD_MOUNT_PATH="${GITHUB_WORKSPACE}"
-          fi
-
-          echo "Arguments:"
-          echo
-          echo "  Root reserve:      ${{ inputs.root-reserve-mb }} MiB"
-          echo "  Temp reserve:      ${{ inputs.temp-reserve-mb }} MiB"
-          echo "  Swap space:        ${{ inputs.swap-size-mb }} MiB"
-          echo "  Overprovision LVM: ${{ inputs.overprovision-lvm }}"
-          echo "  Mount path:        ${BUILD_MOUNT_PATH}"
-          echo "  Root PV loop path: ${{ inputs.pv-loop-path }}"
-          echo "  Temp PV loop path: ${{ inputs.tmp-pv-loop-path }}"
           echo -n "  Removing:     "
           if [[ ${{ inputs.remove-dotnet }} == 'true' ]]; then
             echo -n "dotnet "
@@ -108,6 +58,9 @@ runs:
           fi
           if [[ ${{ inputs.remove-docker-images }} == 'true' ]]; then
             echo -n "docker "
+          fi
+          if [[ ${{ inputs.remove-large-packages }} == 'true' ]]; then
+            echo -n "large-packages"
           fi
           echo
 
@@ -127,68 +80,26 @@ runs:
           if [[ ${{ inputs.remove-docker-images }} == 'true' ]]; then
             sudo docker image prune --all --force
           fi
+          if [[ ${{ inputs.remove-large-packages }} == 'true' ]]; then
+            sudo rm -rf "/usr/local/share/boost"
+            sudo rm -rf "$AGENT_TOOLSDIRECTORY"
+            sudo apt-get remove -y '^aspnetcore-.*' || echo "::warning::The command [sudo apt-get remove -y '^aspnetcore-.*'] failed to complete successfully. Proceeding..."
+            sudo apt-get remove -y '^dotnet-.*' --fix-missing || echo "::warning::The command [sudo apt-get remove -y '^dotnet-.*' --fix-missing] failed to complete successfully. Proceeding..."
+            sudo apt-get remove -y '^llvm-.*' --fix-missing || echo "::warning::The command [sudo apt-get remove -y '^llvm-.*' --fix-missing] failed to complete successfully. Proceeding..."
+            sudo apt-get remove -y 'php.*' --fix-missing || echo "::warning::The command [sudo apt-get remove -y 'php.*' --fix-missing] failed to complete successfully. Proceeding..."
+            sudo apt-get remove -y '^mongodb-.*' --fix-missing || echo "::warning::The command [sudo apt-get remove -y '^mongodb-.*' --fix-missing] failed to complete successfully. Proceeding..."
+            sudo apt-get remove -y '^mysql-.*' --fix-missing || echo "::warning::The command [sudo apt-get remove -y '^mysql-.*' --fix-missing] failed to complete successfully. Proceeding..."
+            sudo apt-get remove -y azure-cli google-chrome-stable firefox powershell mono-devel libgl1-mesa-dri --fix-missing || echo "::warning::The command [sudo apt-get remove -y azure-cli google-chrome-stable firefox powershell mono-devel libgl1-mesa-dri --fix-missing] failed to complete successfully. Proceeding..."
+            sudo apt-get remove -y google-cloud-sdk --fix-missing || echo "::debug::The command [sudo apt-get remove -y google-cloud-sdk --fix-missing] failed to complete successfully. Proceeding..."
+            sudo apt-get remove -y google-cloud-cli --fix-missing || echo "::debug::The command [sudo apt-get remove -y google-cloud-cli --fix-missing] failed to complete successfully. Proceeding..."
+            sudo apt-get autoremove -y || echo "::warning::The command [sudo apt-get autoremove -y] failed to complete successfully. Proceeding..."
+            sudo apt-get clean || echo "::warning::The command [sudo apt-get clean] failed to complete successfully. Proceeding..."
+          fi
+
           echo "... done"
-
-          VG_NAME=buildvg
-
-          # github runners have an active swap file in /mnt/swapfile
-          # we want to reuse the temp disk, so first unmount swap and clean the temp disk
-          echo "Unmounting and removing swap file."
-          sudo swapoff -a
-          sudo rm -f /mnt/swapfile
-
-          echo "Creating LVM Volume."
-          echo "  Creating LVM PV on root fs."
-          # create loop pv image on root fs
-          ROOT_RESERVE_KB=$(expr ${{ inputs.root-reserve-mb }} \* 1024)
-          ROOT_FREE_KB=$(df --block-size=1024 --output=avail / | tail -1)
-          ROOT_LVM_SIZE_KB=$(expr $ROOT_FREE_KB - $ROOT_RESERVE_KB)
-          ROOT_LVM_SIZE_BYTES=$(expr $ROOT_LVM_SIZE_KB \* 1024)
-          sudo touch "${{ inputs.pv-loop-path }}" && sudo fallocate -z -l "${ROOT_LVM_SIZE_BYTES}" "${{ inputs.pv-loop-path }}"
-          export ROOT_LOOP_DEV=$(sudo losetup --find --show "${{ inputs.pv-loop-path }}")
-          sudo pvcreate -f "${ROOT_LOOP_DEV}"
-
-          # create pv on temp disk
-          echo "  Creating LVM PV on temp fs."
-          TMP_RESERVE_KB=$(expr ${{ inputs.temp-reserve-mb }} \* 1024)
-          TMP_FREE_KB=$(df --block-size=1024 --output=avail /mnt | tail -1)
-          TMP_LVM_SIZE_KB=$(expr $TMP_FREE_KB - $TMP_RESERVE_KB)
-          TMP_LVM_SIZE_BYTES=$(expr $TMP_LVM_SIZE_KB \* 1024)
-          sudo touch "${{ inputs.tmp-pv-loop-path }}" && sudo fallocate -z -l "${TMP_LVM_SIZE_BYTES}" "${{ inputs.tmp-pv-loop-path }}"
-          export TMP_LOOP_DEV=$(sudo losetup --find --show "${{ inputs.tmp-pv-loop-path }}")
-          sudo pvcreate -f "${TMP_LOOP_DEV}"
-
-          # create volume group from these pvs
-          sudo vgcreate "${VG_NAME}" "${TMP_LOOP_DEV}" "${ROOT_LOOP_DEV}"
-
-          echo "Recreating swap"
-          # create and activate swap
-          sudo lvcreate -L "${{ inputs.swap-size-mb }}M" -n swap "${VG_NAME}"
-          sudo mkswap "/dev/mapper/${VG_NAME}-swap"
-          sudo swapon "/dev/mapper/${VG_NAME}-swap"
-
-          echo "Creating build volume"
-          # create and mount build volume
-          sudo lvcreate -l 100%FREE -n buildlv "${VG_NAME}"
-          if [[ ${{ inputs.overprovision-lvm }} == 'true' ]]; then
-            sudo mkfs.ext4 -m0 "/dev/mapper/${VG_NAME}-buildlv"
-          else
-            sudo mkfs.ext4 -Enodiscard -m0 "/dev/mapper/${VG_NAME}-buildlv"
-          fi
-          if [[ ! -d "${BUILD_MOUNT_PATH}" ]]; then
-            sudo mkdir -p "${BUILD_MOUNT_PATH}"
-          fi
-          sudo mount "/dev/mapper/${VG_NAME}-buildlv" "${BUILD_MOUNT_PATH}"
-          sudo chown -R "${{ inputs.build-mount-path-ownership }}" "${BUILD_MOUNT_PATH}"
 
     - name: Disk space report after modification
       shell: bash
       run: |
-        echo "Memory and swap:"
-        free
-        echo
-        swapon --show
-        echo
-
         echo "Available storage:"
         df -h
